// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create bam adapter config 1`] = `
Object {
  "bamLocation": Object {
    "base": "http://localhost/path/to/my.bam",
    "uri": "/path/to/my.bam",
  },
  "configId": Any<String>,
  "index": Object {
    "configId": Any<String>,
    "location": Object {
      "base": "http://localhost/path/to/my.bam.bai",
      "uri": "/path/to/my.bam.bai",
    },
  },
  "type": "BamAdapter",
}
`;

exports[`create track config 1`] = `
Object {
  "adapter": Object {
    "bamLocation": Object {
      "base": "http://localhost/path/to/my.bam",
      "uri": "/path/to/my.bam",
    },
    "configId": Any<String>,
    "index": Object {
      "configId": Any<String>,
      "location": Object {
        "base": "http://localhost/path/to/my.bam.bai",
        "uri": "/path/to/my.bam.bai",
      },
    },
    "type": "BamAdapter",
  },
  "configId": Any<String>,
  "renderers": Object {
    "PileupRenderer": Object {
      "configId": Any<String>,
      "type": "PileupRenderer",
    },
    "SvgFeatureRenderer": Object {
      "configId": Any<String>,
      "labels": Object {
        "configId": Any<String>,
      },
      "type": "SvgFeatureRenderer",
    },
    "configId": Any<String>,
  },
  "type": "AlignmentsTrack",
}
`;
